--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "alioss-uploader-plugin",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "a plugin for upload static files to aliyun oss",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/taosin/alioss-uploader-plugin.git"
@@ -21,7 +20,7 @@
   },
   "homepage": "https://github.com/taosin/alioss-uploader-plugin#readme",
   "dependencies": {
-    "ali-oss": "^6.0.1",
+    "ali-oss": "^6.11.2",
     "chalk": "^2.4.1",
     "co": "^4.6.0",
     "colors": "^1.3.2",
