--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alioss-uploader-plugin",
+  "name": "@taosin/alioss-uploader-plugin",
   "version": "1.2.2",
   "description": "a plugin for upload static files to aliyun oss",
   "main": "index.js",
@@ -28,5 +28,6 @@
     "co": "^4.6.0",
     "colors": "^1.3.2",
     "lodash": "^4.17.11"
-  }
+  },
+  "devDependencies": {}
 }
