--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git+ssh://git@github.com/taosin/alioss-uploader-plugin.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "alioss",
