--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -36,4 +36,4 @@ jobs:
 #       - run: npm ci
 #       - run: npm publish
 #         env:
-#           NODE_AUTH_TOKEN: ${{secrets.alioss_token}}
+#           NODE_AUTH_TOKEN: ${{secrets.write-read-packages}}
